--- a/main.css
+++ b/main.css
@@ -48,7 +48,8 @@ a { color: inherit; }
 #alert { width: 100%; height: 100%; position: absolute; left: 0; top: 0; background-color: rgba(0,0,0,0.4); }
 #alert p { width:500px; height: 300px; position: absolute; left: calc(50% - 250px); top: calc(50% - 150px); color: red; border-radius:10px; background-color: rgba(255,255,255,0.8); -webkit-transform: scaleX(0) scaleY(0); -webkit-transform-origin: center; -webkit-transition: .4s; box-sizing: border-box; padding: 20px; font-size: 20px; }
 #alert p.active { -webkit-transform: scaleX(1) scaleY(1); opacity: 1; }
-#alert span { color: black; position: absolute; top: 10px; right: 10px; font-size: 20px; }
+#alert .btn { color: black; position: absolute; top: 10px; right: 10px; font-size: 20px; }
+#alert span { color: red; }
 
 
  
